2007-06-09 George Giolfan  <georgegiolfan@yahoo.com>

	* CollectionViewTest.cs: Added some tests.
	
2007-06-07  George Giolfan  <georgegiolfan@yahoo.com>

	* CollectionViewTest.cs: Added some tests.