@@ -1,3 +1,7 @@
+2007-06-10 George Giolfan  <georgegiolfan@yahoo.com>
+
+	* CollectionViewTest.cs: Added some tests.
+
 2007-06-09 George Giolfan  <georgegiolfan@yahoo.com>
 
 	* CollectionViewTest.cs: Added some tests.
